style.css
:root {
    --c1: #0c0c0c;
    --c2: #ffffff;
    --c3: #cec000;
    --c4: #0d0d0df2;
    scroll-padding-top: 17rem;
    scroll-behavior: smooth;
}

@media only screen and (min-width : 0) {
    #about {
        flex-wrap: wrap;
    }
}

@media only screen and (min-width : 992px) {
    #about {
        flex-wrap: nowrap;
    }
}

@font-face {
    src: url('./fonts/Nova_Square/NovaSquare-Regular.woff2') format('woff2');
    font-family: "Nova Square";
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

* {
    margin: 0;
    text-decoration: none;
}

body {
    font-family: "Nova Square", sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-color: var(--c1);
}

nav {
    z-index: 1;
    position: fixed;
    top: 0;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    width: 100%;
    background-color: var(--c4);
    padding: 1rem 2.3rem 1rem 1rem;
}

a {
    font-size: 1.5rem;
    color: var(--c3);
    transition: .3s;
}

a:hover,
.playBtn:hover {
    cursor: pointer;
    transform: translateY(-2px);
}

a:active,
.playBtn:active {
    scale: .95;
}

#navLine {
    z-index: 1;
    position: fixed;
    top: 3.8rem;
    width: 100%;
    border: 2px solid var(--c2);
    transition: width 1s, opacity 1s;
}

#logo {
    height: 100vh;
    width: 100vw;
    background: url(imgs/NBTX-logo.webp) no-repeat center / contain;
    transition: 1s;
    animation: glow 2s alternate infinite, jumpIn 2s forwards;
}

.titles {
    color: var(--c2);
    margin-top: 3rem;
}

#releases,
#social,
#about {
    display: flex;
}

#releases {
    justify-content: space-evenly;
    flex-wrap: wrap;
    width: 90vw;
    gap: 5rem 0;
}

#social,
#about {
    justify-content: space-evenly;
    align-items: center;
    gap: 1rem;
    width: 75vw;
    border: 4px solid var(--c2);
    padding: 2rem;
}

#aboutTxt {
    font-size: 1.5rem;
}

#aboutImg {
    width: 30%;
    min-width: 18rem;
    border: 4px solid var(--c2);
}

section {
    max-width: 100rem;
    color: var(--c2);
    margin: 3rem 0;
    opacity: 0;
    transition: .5s;
}

.box {
    position: relative;
    height: 20rem;
    width: 20rem;
    border: 4px solid var(--c2);
}

.title {
    position: absolute;
    text-align: center;
    left: 0;
    right: 0;
    margin: .5rem;
    color: var(--c2);
    text-shadow: 0 0 .5rem var(--c1);
}

.track,
.trackCover {
    width: 100%;
}

.playBtn {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    background-color: var(--c4);
    right: 1rem;
    bottom: -1.8rem;
    border: 2px solid var(--c2);
    backdrop-filter: blur(3px);
    transition: .3s;
}

.time {
    position: absolute;
    bottom: -1.8rem;
}

.timeLine {
    position: absolute;
    bottom: -2.5rem;
    width: 0%;
    border: 2px solid var(--c2);
    box-shadow: 0 0 1rem var(--c2);
    transition: .1s;
}

footer {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    color: var(--c2);
    height: 5rem;
    width: 100%;
    border-top: 2px solid var(--c2);

    div,
    a {
        display: flex;
        justify-content: center;
        align-items: center;
        gap: .5rem;
        height: inherit;
    }
}

#footerLogo {
    height: 100%;
}

#githubLogo {
    height: 40%;
}

.showAnim {
    scale: 1;
    opacity: 1;
}

.hideAnim {
    scale: .9;
    opacity: 0;
}

@keyframes glow {
    from {
        filter: drop-shadow(0 0 1rem var(--c2));
    }

    to {
        filter: drop-shadow(0 0 1rem var(--c3));
    }
}

@keyframes jumpIn {
    from {
        transform: translateY(-5rem);
        opacity: 0;
    }

    to {
        transform: translateY(0);
        opacity: 1;
    }
}

